--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body {
 	margin: 0;
+	font-family: monospace;
 }
 
 header {
-	  background: url(images/head.jpg) no-repeat center center fixed; 
+	  background: url(images/h.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  padding-left: 10px;
+  padding-right:10px;
 }
 
 img {
@@ -15,20 +18,22 @@ img {
 }
 
 h1 {
-	font-family: monospace;
-	border: 0.3em solid gray;
+	border: 0.3em solid white;
 	font-size: 5em;
 	padding: 0.3em;
 	max-width: 900px;
 	text-align: center;
 	margin: 0 auto;
-	color: gray;
+	color: white;
+	text-shadow: 2px 2px 8px #000000;
+	box-shadow: 0px 0px 8px #000000;
 }
 
 header h2 {
-	font-family: monospace;
 	text-align: center;
-	color: gray;
+	text-shadow: 0px 0px 5px #000000;
+	color: white;
+	padding-bottom: 10px;
 }
 
 ul, nav, li, a {
@@ -38,7 +43,14 @@ nav ul li{
 	display: inline;
 	text-align: right;
 }
+nav ul li a {
+	color:rgba(127, 127, 127, 0.8);
+}
+
 a {
 	text-decoration: none;
-	font-family: monospace;
+}
+
+nav {
+	padding-top: 5px;
 }
