--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body {
 }
 
 header {
-	  background: url(images/h.jpg) no-repeat center center fixed; 
+	  background: url(images/1.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   padding-left: 10px;
   padding-right:10px;
+  height: 600px;
 }
 
 img {
@@ -19,7 +20,7 @@ img {
 
 h1 {
 	border: 0.3em solid white;
-	font-size: 5em;
+	font-size: 4em;
 	padding: 0.3em;
 	max-width: 900px;
 	text-align: center;
@@ -44,13 +45,24 @@ nav ul li{
 	text-align: right;
 }
 nav ul li a {
-	color:rgba(127, 127, 127, 0.8);
+	text-align: center;
+	text-shadow: 0px 0px 5px #000000;
+	color: white;
+	padding-bottom: 10px;
+	font-size: 1.5em;
 }
 
+nav ul li a:hover {
+	color: rgba(255, 255, 255, 0.5);
+}
+ul {
+	padding-left: 0;
+}
 a {
 	text-decoration: none;
 }
 
 nav {
 	padding-top: 5px;
+	margin-bottom: 150px;
 }
