--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-	margin: 0;
-	font-family: monospace;
-	background-color: white;
-		  background: url(images/1.jpg) no-repeat center center fixed; 
+  margin: 0;
+  font-family: monospace;
+  background-color: white;
+  background: url(images/1.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -101,9 +101,10 @@ section h2 {
 	background-color: white;
 	padding: 6px;
 }
-.shrink {
+.pstyle {
 	max-width: 90%;
 	box-shadow: 0px 0px 5px #000000;
+
 }
 .cent {
 	text-align: center;
