--- a/style.css
+++ b/style.css
@@ -109,3 +109,16 @@ section h2 {
 .cent {
 	text-align: center;
 }
+
+address {
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1.5em;
+	margin-left: 3%;
+	margin-bottom:3%;
+	margin-right: 3%;
+	padding-top: 1%;
+	padding-bottom: 1%;
+	box-shadow: 0px 0px 5px #000000;
+}
