--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ section h2 {
 	font-size: 1.1rem;
 	margin: 0 auto;
 	font-family: arial;
+	padding: 15px;
 }
 
 #about img {
@@ -125,5 +126,6 @@ address {
 
 #portfolio img {
 	width: 100%;
-	margin-top: 15px;
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
